# throughline

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: index.html
scripts/: gen_demo.py
specs/001-context-budget-analyzer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-context-budget-analyzer/checklists/: requirements.md
specs/001-context-budget-analyzer/contracts/: cli.md  hooks.md  report-data.schema.json  (+1 more)
specs/002-cost-trends/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-token-usage-cost/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-token-lens-legibility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-burn-down-levers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/throughline/: __init__.py  __main__.py  cli.py  config.py
tests/: app_aggregate.test.mjs  burndown.test.mjs  helpers.py  test_aggregate.py  test_attribution.py  test_breakdown.py  test_cost.py  test_hooks_install.py  test_levers_blob.py  test_mode_timeline.py  test_model.py  test_mounted.py  test_no_network.py  test_parser.py  test_readonly.py  test_sequences.py  test_sizing.py  test_survival.py  test_timeline.py  test_tokens.py  token_flow.test.mjs
tests/fixtures/: mcp_config.json  post_tool_use_event.json  pre_compact_event.json
(+45 files in other folders)
